<resources>
    <string name="app_name">Spread</string>

    <string name="name">Nombre</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="map_style_url">mapbox://styles/himochi/cjois77wl020w2sk7muy2htur</string>


    <string name="title_hint">Título</string>
    <string name="description_hint">Descripción</string>

    <!-- LOGIN -->
    <string name="prompt_password">Contraseña</string>
    <string name="title_activity_login">Sign in</string>
    <string name="ethereum_info_title">Esta aplicación usa Ethereum</string>
    <string name="login_info_title">Información sobre la aplicación</string>
    <string name="login_info_first_section_title">Esta aplicación funciona sobre Ethereum por eso hay ciertas funcionalidades que necesitan el consumo de ether :</string>
    <string name="login_info_first_section_description_1">Las alertas tanto por la aplicación como por Telegram y la consulta en el mapa NO consumen ether.</string>
    <string name="login_info_first_section_description_2">Dejar guardardas tus alertas para que el resto pueda consultarlas SÍ consume ether.</string>
    <string name="login_info_second_section_title">¿Cómo consigo tener ether?</string>
    <string name="login_info_second_section_description_1">Si ya tienes una cuenta con ether, haz una transacción a la cuenta creada por la aplicación, puedes encontrar la dirección en la ventana de Ajustes</string>
    <string name="login_info_second_section_description_2">Si no tienes una cuenta, no te preocupes, puedes comprar ether para esta cuenta directamente en alguna plataforma online.</string>


    <!-- TABS TITLE -->
    <string name="tab_text_home">Home</string>
    <string name="tab_text_profile">Perfil</string>
    <string name="tab_text_historial">Avisos</string>
    <string name="tab_text_map">Mapa</string>
    <string name="tab_text_settings">Ajustes</string>


    <!-- HOME -->
    <string name="button_help">SOS</string>
    <string name="button_help_description">Petición de ayuda</string>

    <!-- PROFILE -->
    <string name="profile_personal_data">Información personal</string>
    <string name="profile_dresscode">Vestuario</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_age">Edad</string>
    <string name="profile_watchword">Santo y seña</string>
    <string name="profile_watchword_first">Mensaje</string>
    <string name="profile_watchword_second">Respuesta</string>
    <string name="profile_contact">Contactos</string>

    <string name="telegram_title">¿Cómo registro mi grupo de Telegram?</string>
    <string name="telegram_description">Lo primero es saber que será un bot el que notifique en tu nombre, necesita saber a quién, ayúdale : \n
     1. Añade <b>@spread_notifications_bot</b> a tu grupo como si fuese un contacto más. \n
     2. Pregúntale cuál el identificador del grupo, escribiendo en el chat <b>/getChat.</b> \n
     3. Dale el nombre con el que quieras guardarlo. </string>
    <string name="add_telegram_group">Añade un grupo de Telegram</string>
    <string name="telegram_chat_hint">ID del grupo</string>
    <string name="telegram_chat_name_hint">Nombre del grupo</string>


    <!-- MAP -->
    <string name="action_settings">Settings</string>
    <string name="location_auto">Auto</string>
    <string name="location_manual">Manual</string>
    <string name="location_title">Localización</string>
    <string name="location_saved">Guardado correctamente</string>
    <string name="location_no_available">Localización no disponible -> Paso a modo manual</string>
    <string name="no_text">None</string>

    <string name="menu_item_alert">Alerta</string>
    <string name="menu_item_pic">Cartel</string>

    <string name="button_add_pin_alert">Añade una alerta</string>
    <string name="button_add_pin_poster">Añade un cartel</string>

    <!-- HISTORICAL -->
    <string name="historical_title">Recientes</string>

    <!-- SETTINGS -->
    <string name="settings_wallet_title">Configuración de la Wallet</string>
    <string name="settings_wallet_account">Dirección cuenta :</string>
    <string name="settings_wallet_password">Contraseña :</string>
    <string name="settings_wallet_balance">Saldo disponible :</string>
    <string name="radius_title">Radio de alcance :</string>

    <string name="snackbar_information_copy">Cuenta copiada  😊 </string>

    <!-- ACTIONS -->
    <string name="button_send">Enviar</string>
    <string name="button_save">Guardar</string>
    <string name="button_publish">Publicar</string>
    <string name="button_read">Mostrar</string>
    <string name="button_add_pin">Añade un nuevo pin</string>
    <string name="button_read_wallet">Mostrar Wallet</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_active">ACTIVAR</string>
    <string name="button_finish">Terminar</string>

    <string name="button_sign_in">Registrarse</string>

    <!-- SNACKBAR -->
    <string name="snackbar_alert_gps">Para pedir ayuda activa el GPS</string>
    <string name="snackbar_alert_transaction">"Ha habido un error en la transacción"</string>
    <string name="snackbar_alert_image">"No se ha guardado correctamente la imagen"</string>
    <string name="snackbar_information_transaction">Tu petición se ha enviado</string>
    <string name="snackbar_confirmation_transaction">Guardado correctamente</string>
    <string name="place_title">Lugar</string>


    <!-- ERROR -->
    <string name="error_invalid_password">Debe tener entre 8 y 20 caracteres</string>
    <string name="error_invalid_chat_id">Debe ser un identificador válido</string>
    <string name="settings_radius_info"> <b> Nadie </b> no avisa a desconocidos, pero sí a tus contactos.</string>
    <string name="profile_info_title">¿Qué es el santo y seña?</string>
    <string name="profile_info_description">Santo y seña es una forma de identificar a la persona que ha solicitado tu ayuda y aparecerá en las notificaciones, de modo que si sospechas que es una persona, te acercas, le dices el  santo y si te responde con la seña, MATCH!</string>
    <string name="button_continue">Continuar</string>
    <string name="snackbar_information_profile">La imagen que añadas va a compartirse al enviar una petición</string>
    <string name="snackbar_title_profile"><b>¡Atención!</b></string>
    <string name="profile_other_content">Añade otra información para identificarte : color de pelo, raza...</string>
    <string name="profile_other_title">Otra información</string>
    <string name="login_title">Bienvenida a Spread</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings_tutorial_title">Tutorial</string>

</resources>
