<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/mediumMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/first_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        android:textSize="@dimen/msmallText"
        android:textStyle="bold"
        android:text="@string/login_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/first_section_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/login_info_first_section_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_section_title" />

    <RelativeLayout
        android:id="@+id/first_section_sub_1"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_section_description">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/first_section_subimage_1"
            android:layout_width="@dimen/iconSide"
            android:layout_height="@dimen/iconSide"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_positive" />

        <TextView
            android:id="@+id/first_section_subdescription_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/first_section_subimage_1"
            android:text="@string/login_info_first_section_description_1"
            app:layout_constraintEnd_toEndOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/first_section_sub_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_section_sub_1">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/first_section_subimage_2"
            android:layout_width="@dimen/iconSide"
            android:layout_height="@dimen/iconSide"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_negative" />

        <TextView
            android:id="@+id/first_section_subdescription_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/first_section_subimage_2"
            android:text="@string/login_info_first_section_description_2" />
    </RelativeLayout>

    <View
        android:id="@+id/dottedLine"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginHorizontal="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/dotted_line"
        android:layerType="software"
        app:layout_constraintTop_toBottomOf="@+id/first_section_sub_2" />


    <TextView
        android:id="@+id/second_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/login_info_second_section_title"
        android:textStyle="bold"
        android:textSize="@dimen/msmallText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dottedLine" />

    <TextView
        android:id="@+id/second_section_description_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/login_info_second_section_description_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_section_title" />

    <TextView
        android:id="@+id/second_section_description_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/login_info_second_section_description_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_section_description_1" />

</android.support.constraint.ConstraintLayout>