<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorDark"
    tools:context=".Activities.MainActivity">


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nameInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mediumMargin"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenterHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/name"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/secondaryTextColor"
        android:textColorHighlight="@color/secondaryTextColor"/>


    <Button
        android:id="@+id/homeButton"
        android:layout_width="@dimen/iconSide"
        android:layout_height="@dimen/iconSide"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="@dimen/iconSide"
        android:layout_height="@dimen/iconSide"
        android:layout_marginEnd="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/ic_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallMargin"
        android:background="@drawable/round_button_shape"
        android:text="@string/button_save"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
        app:layout_constraintTop_toTopOf="@+id/guidelineCenterHorizontal" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallMargin"
        android:background="@drawable/round_button_shape"
        android:text="@string/button_read"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenterVertical"
        app:layout_constraintTop_toTopOf="@+id/guidelineCenterHorizontal" />

    <Button
        android:id="@+id/loadWalletDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/round_button_shape"
        android:paddingHorizontal="@dimen/largeMargin"
        android:text="@string/button_read_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineCenterHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineCenterVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>